Separate ftests & its to diffrerent profile